test/fail/Unsolved-meta-in-postulate.agda
module Unsolved-meta-in-postulate where

postulate P : _
